--- a/src/Kubernox.Client/Kubernox.Client.csproj
+++ b/src/Kubernox.Client/Kubernox.Client.csproj
@@ -5,9 +5,16 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<Target Name="OpenApi" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'">
-		<Exec Command="$(NSwagExe_Net80) run nswag.json" />
+		<!--<Exec Command="$(NSwagExe_Net80) run nswag.json" />-->
+		<Exec Command="kiota generate -l CSharp -c KubernoxClient -n Kubernox.Client -d ./../openapi.yaml -o ." />
 	</Target>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Kiota.Serialization.Json" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Kiota.Serialization.Multipart" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Kiota.Serialization.Text" Version="1.12.0" />
 		<PackageReference Include="NSwag.MSBuild" Version="14.1.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
