--- a/src/Kubernox.Infrastructure/Kubernox.Infrastructure.csproj
+++ b/src/Kubernox.Infrastructure/Kubernox.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.7.24405.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kubernox.Domain\Kubernox.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
